# mod-manager

./: .clang-format  .clang-tidy  .clangd  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
include/: backend.hpp  database.cpp  server.hpp
src/: life.hpp  main.cpp  shaders.hpp
